# mira-v1-core

./: Cargo.toml  Forc.toml  README.md
.github/actions/initialize/: action.yaml
.github/workflows/: check_fmt.yml  test.yml
contracts/hook/: Forc.toml
contracts/mira_amm_contract/: Forc.toml
contracts/mira_amm_contract/src/: main.sw
contracts/mira_amm_contract/tests/functions/: burn.rs  create_pool.rs  mint.rs  mod.rs  swap.rs
contracts/mira_amm_contract/tests/utils/: mod.rs
contracts/mira_validation_hook/src/: main.sw
contracts/mocks/mock_token/: Forc.toml
contracts/mocks/mock_token/src/: main.sw
libraries/interfaces/src/: data_structures.sw  errors.sw  events.sw  hook.sw  lib.sw  mira_amm.sw
libraries/math/src/: pool_math.sw
libraries/utils/: Forc.toml
libraries/utils/src/: utils.sw
test-harness/: Cargo.toml
test-harness/src/: data_structures.rs  interface.rs  paths.rs  setup.rs  types.rs
