[workspace.package]
name = "mira-v1-core"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["./contracts/mira_amm_contract", "./test-harness"]

[workspace.dependencies]
fuels = { version = "0.62.0", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
anyhow = "1.0.86"
rand = "0.8.5"
